2003-04-06  Kevin Vandersloot <kfv101@psu.edu>

	* help/C/Makefile.am: get the figures correct

2003-04-03  Kevin Vandersloot <kfv101@psu.edu>

	* charpick.c: Connect to the clicked signal to fix the stuck button problem. Fix
	the problem with two tooltips showing up on the palettes button. Comment out
	the unused static gchar* variables.

2003-03-25  Kevin Vandersloot <kfv101@psu.edu>

	* charpick.c, properties.c: Unicodeify the applet. Fixes bugs #93682,
	#104324, #32769
	
	* properties.c, charpick.c: remove frame to save space. Bind to focus event for
	prefs dialog to prevent unnecessary updates

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* charpick.c: (help_cb):
	* properties.c: (phelp_cb):  update for screen-exec changes.

2003-03-02  Takeshi AIHANA <aihana@gnome.gr.jp>

	* help/ja/*.xml, help/ja/*.omf, help/ja/figures/*.png, help/ja/Makefile.am:
	added new documents for GNOME 2.2 tranlated by
	KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* charpick.c (applet_destroy): destroy
	the preferences dialog as well.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_CharpickerApplet.server.in.in: added bugzilla attributtes

2002-10-09 Pat Costello <patrick.costello@sun.com>

	* help/C/char-palette.xml

	* Added text press A key.
	* Replaced "spacebar" with D key.
	* Removed 4 refs to GNOME in GNOME Character Map.
	* Changed final step in procedure to Click Close.
	
2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* charpick.c: (about), (help_cb):
	* properties.c: (phelp_cb), (show_preferences_dialog):
	kill the HAVE_GTK_MULTIHEAD conditionals - we require
	gtk HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* charpick.c: (help_cb):
	* properties.c: (phelp_cb): use the mulitscreen
	gnome_help variants.

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet into libexec.
