@@ -1,3 +1,8 @@
+2003-04-25  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* properties.c:  More HIGifcation of the preferences, properties, 
+	and add dialogs.
+
 2003-04-06  Kevin Vandersloot <kfv101@psu.edu>
 
 	* help/C/Makefile.am: get the figures correct
